<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Accelerometer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_shake">My Shaker</string>
    <string name="x_axis">X-Axis</string>
    <string name="y_axis">Y-Axis</string>
    <string name="z_axis">Z-Axis</string>
    <string name="nothing">TODO</string>

</resources>
