<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 Andrei Olaru, Cristian Grigoras.
  
  This file is part of Accelerometer.
  
  Accelerometer is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.
  
  Accelerometer is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  
  You should have received a copy of the GNU General Public License along with Accelerometer.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<TextView
		android:paddingTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:textStyle="bold"
		android:gravity="center"
		android:text="@string/my_shake"/>
	<TableLayout
		android:paddingTop="10dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stretchColumns="*">
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/x_axis"
				android:gravity="center"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/y_axis"
				android:gravity="center"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:text="@string/z_axis"
				android:gravity="center"/>
		</TableRow>
		<TableRow>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/x_axis"
				android:gravity="center"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/y_axis"
				android:gravity="center"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/z_axis"
				android:gravity="center"/>
		</TableRow>
	</TableLayout>
	<ImageView
		android:paddingTop="10dip"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/image"
		android:layout_gravity="center"
		android:contentDescription="@string/nothing"/>
	<TextView
		android:paddingTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:textStyle="bold"
		android:gravity="center"
		android:id="@+id/time"/>
	<TextView
		android:paddingTop="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="16sp"
		android:textStyle="bold"
		android:gravity="center"
		android:id="@+id/total"/>
</LinearLayout>
